--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <i class="fa-solid fa-bars" id="menu-icon" aria-hidden="true"></i>
 
         <nav class="navbar">
-            <a href="home.html" class="active">Home</a>
+            <a href="index.html" class="active">Home</a>
             <a href="about.html" >About</a>
             <a href="contact.html">Contact</a>
             <a href="project.html">Projects</a>
