--- a/project.html
+++ b/project.html
@@ -17,7 +17,7 @@
         <i class="fa-solid fa-bars" id="menu-icon" aria-hidden="true"></i>
 
         <nav class="navbar" id="navbar">
-            <a href="home.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="about.html"class="active">About</a>
             <a href="contact.html">Contact</a>
             <a href="project.html">Projects</a>
