download added to resume button

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <a href="#"><i class="fa-brands fa-square-x-twitter"></i></a> -->
                 </div>
                 <div class="center-container">
-                    <a href="assests/resume/Dhaya Baskar Resume.pdf" class="btn" id="download">Download CV</a>
+                    <a href="assests/resume/Dhaya Baskar Resume.pdf" class="btn" download="Dhaya Baskar Resume.pdf" target="_blank">Download CV</a>
                 </div>
                 
                 <!-- <a href="Dhaya_Baskar_Resume.pdf" download="Dhaya Baskar Resume.pdf" class="btn" id="download">Download CV</a> -->
