made responsive changes

--- a/about.html
+++ b/about.html
@@ -49,29 +49,35 @@
             <p class="card-title" id="card-title">Front-End Developer</p>
             <p>Networkzone13 LTD</p>
             <p>02nd Feb 2024 - 29th Feb 2024</p>
-            <p class="card-description" id="card-description">I contributed to the Careersly project by developing responsive web pages using HTML, CSS, and JavaScript, focusing on delivering a flawless user experience. Collaborating closely with cross-functional teams, I enhanced platform functionality and design. These efforts resulted in an optimized user experience and noticeable improvements in user engagement metrics.</p>
-            <!-- <ul>
+            <ul>
                 <li>Developed responsive web pages for Careersly project utilizing
                     HTML, CSS, and JavaScript, ensuring flawless user experience</li>
                 <li> Collaborated with cross-functional teams to enhance platform
                     functionality and design, resulting in optimized user experience and
                     increased user engagement metrics</li>
-            </ul> -->
+            </ul>
         </div>
 
         <div class="card">
             <p class="card-title" id="card-title">Associate Consultant</p>
             <p>Atos | Eviden</p>
             <p>13th Sep 2022 - 25th Aug 2023</p>
-            <p class="card-description" id="card-description">I bring proficiency as a Salesforce administrator, adept in package installation, Object Manager and App Manager utilization, field generation, and page layout modification. My comprehensive understanding spans a wide array of admin features. Additionally, I excel in front-end and back-end development using HTML, CSS, JavaScript, and Java. I have applied responsive designs and optimized website performance to deliver an enhanced user experience.</p>
-        </div>
+            <ul>
+                <li>I bring proficiency as a Salesforce administrator, adept in package installation, Object Manager and App Manager utilization, field generation, and page layout modification. My comprehensive understanding spans a wide array of admin features.</li>
+                <li>Additionally, I excel in front-end and back-end development using HTML, CSS, JavaScript, and Java. I have applied responsive designs and optimized website performance to deliver an enhanced user experience.</li>
+            </ul>
+
+            </div>
 
         <div class="card">
             <p class="card-title" id="card-title">System Trainee</p>
             <p>Intellect Design Arena</p>
             <p>30th Aug 2021 - 13th May 2022</p>
-            <p class="card-description" id="card-description">I specialize in developing responsive user interfaces using HTML, CSS, and JavaScript. My expertise includes executing CRUD (Create, Read, Update, Delete) processes and seamlessly integrating with SQL databases such as MySQL for efficient data management. This combination allows me to create robust, user-friendly applications that meet both functional and performance requirements.</p>
-        </div>
+            <ul>
+                <li>I specialize in developing responsive user interfaces using HTML, CSS, and JavaScript. My expertise includes creating visually appealing and interactive designs that adapt smoothly across different devices and screen sizes.</li>
+                <li>Additionally, I execute CRUD (Create, Read, Update, Delete) processes and integrate seamlessly with SQL databases like MySQL. This capability ensures efficient data management, enabling me to build robust and user-friendly applications that meet high standards of functionality and performance.</li>
+            </ul>
+             </div>
     </div>
 
     <!-- Skills -->
