--- a/contact.html
+++ b/contact.html
@@ -33,15 +33,15 @@
     <form action="mailto:dhayab2021@gmail.com" method="post" enctype="text/plain">
 
         <div class="input-box">
-            <input type="text" placeholder="Full Name">
-            <input type="email" placeholder="Email Address">
+            <input type="text" name="full_name" placeholder="Full Name" required>
+            <input type="email" name="email_address" placeholder="Email Address" required>
         </div>
 
         <!-- <div class="input-box">
             <input type="number" placeholder="Mobile Number">
             <input type="text" placeholder="Email Subject">
         </div> -->
-        <textarea name="" id="" cols="30" rows="10" placeholder="Your Message...."></textarea>
+        <textarea name="message" id="text-message" cols="30" rows="10" placeholder="Your Message...." required></textarea>
         <input type="submit" value="Send Message" class="btn">
     </form>
 
