--- a/project.html
+++ b/project.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>About</title>
+    <title>Projects</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="assests/icons/favicon.png">
 </head>
@@ -18,9 +18,9 @@
 
         <nav class="navbar" id="navbar">
             <a href="index.html">Home</a>
-            <a href="about.html"class="active">About</a>
+            <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
-            <a href="project.html">Projects</a>
+            <a href="project.html" class="active">Projects</a>
         </nav>
 
     </header>
