--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
         <div class="home-content">
                 <h3>Hi, Myself</h3>
                 <h1>Dhaya Baskar</h1>
-                <h3>And I'm a <span>Software Developer</span></h3>
+                <h3>And I'm a <span id="developer-role">Software</span><span id="developer">Developer</span></h3>
                 <div class="home-content">
-                    <p>"I'm a skilled Software Developer committed to high-quality solutions, specializing in Java programming and agile innovation. Known for my attention to detail and problem-solving, I create robust, scalable solutions that exceed expectations. Eager to explore new opportunities and grow further. Let's build the future together!"</p>
+                    <p> "A passionate Web Developer with extensive hands-on experience. I specialize in creating dynamic and responsive websites, with expertise in both front-end and back-end development. Known for my attention to detail and problem-solving, I deliver robust, scalable solutions that exceed expectations. Let's build the future together!"</p>
                 </div>
                 <div class="social-media">
                     <a href="https://www.linkedin.com/in/dhaya-baskar-61401723b/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
