--- a/project.html
+++ b/project.html
@@ -25,8 +25,19 @@
 
     </header>
 
-    <section>
-        <h1 style="font-size: 100px;">Dhaya</h1>
+    <section class="project" id="project">
+        <h2>Projects</h2>
+
+        <!-- Project -->
+        <div class="project" id="project">
+            <div class="card">
+                <img src="" alt="">
+                <h3></h3>
+                <p></p>
+                <a href=""></a>
+            </div>
+        </div>
+    
     </section>
 
 <!-- JS -->
