--- a/project.html
+++ b/project.html
@@ -25,16 +25,43 @@
 
     </header>
 
+    <!-- Project -->
     <section class="project" id="project">
         <h2>Projects</h2>
 
-        <!-- Project -->
+        <!-- Project 1-->
         <div class="project" id="project">
             <div class="card">
-                <img src="" alt="">
-                <h3></h3>
-                <p></p>
-                <a href=""></a>
+                <img src="assests/images/Starbucks website.jpeg" alt="">
+                <h4>Project 1</h4>
+                <p>Project Description</p>
+                <div class="project-btn" id="project-btn">
+                    <a href="#link">Project Link</a>
+                </div>
+            </div>
+        </div>
+
+         <!-- Project 2-->
+         <div class="project" id="project">
+            <div class="card">
+                <img src="assests/images/Starbucks website.jpeg" alt="">
+                <h4>Project 1</h4>
+                <p>Project Description</p>
+                <div class="project-btn" id="project-btn">
+                    <a href="#link">Project Link</a>
+                </div>
+            </div>
+        </div>
+
+         <!-- Project 3-->
+         <div class="project" id="project">
+            <div class="card">
+                <img src="assests/images/Starbucks website.jpeg" alt="">
+                <h4>Project 1</h4>
+                <p>Project Description</p>
+                <div class="project-btn" id="project-btn">
+                    <a href="#link">Project Link</a>
+                </div>
             </div>
         </div>
     
