--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Contact</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assests/css/style.css">
     <link rel="icon" type="image/x-icon" href="assests/icons/favicon.png">
 </head>
 <body>
@@ -50,6 +50,6 @@
 
 
 <!-- JS -->
-    <script src="style.js"></script>
+    <script src="assests/js/style.js"></script>
 </body>
 </html>
