--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Contact</title>
     <link rel="stylesheet" href="assests/css/style.css">
-    <link rel="icon" type="image/x-icon" href="assests/icons/favicon.png">
+    <link rel="icon" type="image/x-icon" href="assests/images/Dhaya Baskar Favicon.png">
 </head>
 <body>
 
