--- a/project.html
+++ b/project.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Projects</title>
     <link rel="stylesheet" href="assests/css/style.css">
-    <link rel="icon" type="image/x-icon" href="assests/icons/favicon.png">
+    <link rel="icon" type="image/x-icon" href="assests/images/Dhaya Baskar Favicon.png">
 </head>
 <body>
 
@@ -30,37 +30,44 @@
         <h2>Projects</h2>
 
         <!-- Project 1-->
-        <div class="project" id="project">
+        <div class="project-card" id="project-card">
             <div class="card">
-                <img src="assests/images/Starbucks website.jpeg" alt="">
-                <h4>Project 1</h4>
-                <p>Project Description</p>
+                <img src="assests/images/Carwale_project.png" alt="">
+                <h4 class="project-title">Car Wale Website</h4>
+                <p class="project-description">CarWale app empowers car enthusiasts and buyers with comprehensive information and tools for informed decisions. Designed for a diverse audience passionate about automobiles, our app prioritizes a seamless user experience and robust features.</p>
+                <div class="programs-list" id="programs-list">
+                    <ul>
+                        <li>Java</li>
+                        <li>Spring Boot</li>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>JavaScript</li>
+                    </ul>
+                </div>
                 <div class="project-btn" id="project-btn">
-                    <a href="#link">Project Link</a>
+                    <a href="https://github.com/Dhaya063/Car_Wale/tree/main/Car_wale" target="_blank">Project Link</a>
                 </div>
             </div>
         </div>
 
          <!-- Project 2-->
-         <div class="project" id="project">
+         <div class="project-card" id="project-card">
             <div class="card">
-                <img src="assests/images/Starbucks website.jpeg" alt="">
-                <h4>Project 1</h4>
-                <p>Project Description</p>
-                <div class="project-btn" id="project-btn">
-                    <a href="#link">Project Link</a>
+                <img src="assests/images/Carwale_project.png" alt="">
+                <h4 class="project-title">Shop Pro</h4>
+                <p class="project-description">The Online eCommerce Website provides a seamless shopping experience for users, featuring a wide range of products across various categories. Designed with a user-friendly interface, the platform includes features such as secure payment gateways, real-time order tracking, and personalized recommendations to enhance the shopping experience. The website is built using modern web technologies ensuring fast load times and responsive design for all devices.</p>
+                <div class="programs-list" id="programs-list">
+                    <ul>
+                        <li>Java</li>
+                        <li>Spring Boot</li>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>JavaScript</li>
+                        <li>React JS</li>
+                    </ul>
                 </div>
-            </div>
-        </div>
-
-         <!-- Project 3-->
-         <div class="project" id="project">
-            <div class="card">
-                <img src="assests/images/Starbucks website.jpeg" alt="">
-                <h4>Project 1</h4>
-                <p>Project Description</p>
                 <div class="project-btn" id="project-btn">
-                    <a href="#link">Project Link</a>
+                    <a href="https://github.com/Dhaya063/Shop_pro/tree/main/ShopPro" target="_blank">Project Link</a>
                 </div>
             </div>
         </div>
