--- a/project.html
+++ b/project.html
@@ -51,7 +51,7 @@
         </div>
 
          <!-- Project 2-->
-         <div class="project-card" id="project-card">
+<!--          <div class="project-card" id="project-card">
             <div class="card">
                 <img src="assests/images/Carwale_project.png" alt="">
                 <h4 class="project-title">Shop Pro</h4>
@@ -70,7 +70,7 @@
                     <a href="https://github.com/Dhaya063/Shop_pro/tree/main/ShopPro" target="_blank">Project Link</a>
                 </div>
             </div>
-        </div>
+        </div> -->
     
     </section>
 
