--- a/project.html
+++ b/project.html
@@ -51,26 +51,21 @@
         </div>
 
          <!-- Project 2-->
-<!--          <div class="project-card" id="project-card">
+         <div class="project-card" id="project-card">
             <div class="card">
-                <img src="assests/images/Carwale_project.png" alt="">
-                <h4 class="project-title">Shop Pro</h4>
-                <p class="project-description">The Online eCommerce Website provides a seamless shopping experience for users, featuring a wide range of products across various categories. Designed with a user-friendly interface, the platform includes features such as secure payment gateways, real-time order tracking, and personalized recommendations to enhance the shopping experience. The website is built using modern web technologies ensuring fast load times and responsive design for all devices.</p>
+                <img src="assests/images/Sneaker Nook Homepage.jpg" alt="">
+                <h4 class="project-title">Sneaker Nook</h4>
+                <p class="project-description">Sneaker Nook is a WordPress-based site dedicated to sneaker enthusiasts. It features the latest trends, detailed reviews, and expert tips on sneaker care and styling. Aiming to be a comprehensive guide, Sneaker Nook offers valuable insights and fosters a community for sneaker lovers. Whether you’re seeking information on new releases or advice for maintaining your collection, Sneaker Nook is your go-to resource.</p>
                 <div class="programs-list" id="programs-list">
                     <ul>
-                        <li>Java</li>
-                        <li>Spring Boot</li>
-                        <li>HTML</li>
-                        <li>CSS</li>
-                        <li>JavaScript</li>
-                        <li>React JS</li>
+                        <li>Word Press</li>
                     </ul>
                 </div>
                 <div class="project-btn" id="project-btn">
-                    <a href="https://github.com/Dhaya063/Shop_pro/tree/main/ShopPro" target="_blank">Project Link</a>
+                    <a href="https://sneakernook.wordpress.com" target="_blank">Project Link</a>
                 </div>
             </div>
-        </div> -->
+        </div>
     
     </section>
 
