--- a/project.html
+++ b/project.html
@@ -28,8 +28,27 @@
     <!-- Project -->
     <section class="project" id="project">
         <h2>Projects</h2>
+          <!-- Project 1-->
+        <div class="project-card" id="project-card">
+            <div class="card">
+                <img src="assests/images/Carwale_project.png" alt="">
+                <h4 class="project-title">Car Accessories website</h4>
+                <p class="project-description">Car Transformers** offers premium car products and accessories to elevate your vehicle. Explore our seamless shopping experience and enhance your ride with top-quality upgrades.</p>
+                <div class="programs-list" id="programs-list">
+                    <ul>
+                        <li>React JS</li>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>JavaScript</li>
+                    </ul>
+                </div>
+                <div class="project-btn" id="project-btn">
+                    <a href="https://car-transformers.vercel.app" target="_blank">Project Link</a>
+                </div>
+            </div>
+        </div>
 
-        <!-- Project 1-->
+        <!-- Project 2-->
         <div class="project-card" id="project-card">
             <div class="card">
                 <img src="assests/images/Carwale_project.png" alt="">
@@ -50,7 +69,7 @@
             </div>
         </div>
 
-         <!-- Project 2-->
+         <!-- Project 3-->
          <div class="project-card" id="project-card">
             <div class="card">
                 <img src="assests/images/Sneaker Nook Homepage.jpg" alt="">
