--- a/project.html
+++ b/project.html
@@ -31,7 +31,7 @@
           <!-- Project 1-->
         <div class="project-card" id="project-card">
             <div class="card">
-                <img src="assests/images/Carwale_project.png" alt="">
+                <img src="assests/images/Car_transformers.jpg" alt="">
                 <h4 class="project-title">Car Accessories website</h4>
                 <p class="project-description">Car Transformers** offers premium car products and accessories to elevate your vehicle. Explore our seamless shopping experience and enhance your ride with top-quality upgrades.</p>
                 <div class="programs-list" id="programs-list">
