--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
     <form action="mailto:dhayab2021@gmail.com" method="post" enctype="text/plain">
 
         <div class="input-box">
-            <input type="text" name="full_name" placeholder="Full Name" required>
+            <input type="text" name="full_name" placeholder="Full Name" required autocomplete="off">
             <input type="email" name="email_address" placeholder="Email Address" required>
         </div>
 
