--- a/project.html
+++ b/project.html
@@ -28,12 +28,32 @@
     <!-- Project -->
     <section class="project" id="project">
         <h2>Projects</h2>
-          <!-- Project 1-->
+
+        <!-- Project 1-->
+        <div class="project-card" id="project-card">
+            <div class="card">
+                <img src="assests/images/Sample-Portfolio-Website.png" alt="A Portfolio website Homepage Image">
+                <h4 class="project-title">Portfolio Website</h4>
+                <p class="project-description">A Portfolio website template to showcase the projects. It includes sections for an overview of your work, detailed project descriptions, and your skills and achievements. This template is crafted to present your work in a visually appealing and organized manner.</p>
+                <div class="programs-list" id="programs-list">
+                    <ul>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>JavaScript</li>
+                    </ul>
+                </div>
+                <div class="project-btn" id="project-btn">
+                    <a href="https://car-transformers.vercel.app" target="_blank">Project Link</a>
+                </div>
+            </div>
+        </div>
+        
+          <!-- Project 2-->
         <div class="project-card" id="project-card">
             <div class="card">
                 <img src="assests/images/Car_transformers.jpg" alt="">
                 <h4 class="project-title">Car Accessories website</h4>
-                <p class="project-description">Car Transformers** offers premium car products and accessories to elevate your vehicle. Explore our seamless shopping experience and enhance your ride with top-quality upgrades.</p>
+                <p class="project-description">Car Transformers offers premium car products and accessories to elevate your vehicle. Explore our seamless shopping experience and enhance your ride with top-quality upgrades.</p>
                 <div class="programs-list" id="programs-list">
                     <ul>
                         <li>React JS</li>
