--- a/project.html
+++ b/project.html
@@ -43,7 +43,8 @@
                     </ul>
                 </div>
                 <div class="project-btn" id="project-btn">
-                    <a href="https://dhaya063.github.io/portfolio-website/" target="_blank">Project Link</a>
+<!--                     <a href="https://dhaya063.github.io/portfolio-website/" target="_blank">Project Link</a> -->
+                     <a href="https://github.com/Dhaya063/portfolio-website" target="_blank">Project Link</a>
                 </div>
             </div>
         </div>
